fixed header category display alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -16,7 +16,6 @@ body {
   font-family: "Kumbh Sans", sans-serif;
 }
 
-
 nav {
   position: fixed;
   top: 0;
@@ -30,13 +29,14 @@ nav {
 nav.open {
   top: 0;
   left: 0;
-  left: 0;background-color: white;
+  background-color: white;
   @apply shadow-2xl p-8 lg:shadow-none lg:p-0;
 }
 
 nav ul {
   padding-top: 60px;
-  @apply flex items-start flex-col gap-4 lg:flex-row;
+  display: flex;
+  @apply items-start flex-col gap-4 lg:flex-row;
 }
 
 nav ul li {
@@ -44,28 +44,28 @@ nav ul li {
 }
 
 .close {
-  @apply absolute top-8 left-8 w-10;
+  @apply absolute top-8 left-8;
   z-index: 999;
 }
 
-@media only screen and (max-width: 1024px) {
-    .big-image {
-      height: 900px;
-    }
+@media (min-width: 1024px) {
+  .big-image {
+    height: 900px;
+  }
 
-    nav {
-      position: relative;
-      left: 0;
-      width: auto;
-      height: auto;
-      z-index: auto;
-    }
+  nav {
+    position: relative;
+    left: 0;
+    width: auto;
+    height: auto;
+    z-index: auto;
+  }
 
-    nav.open {
-      background-color: transparent;
-    }
+  nav.open {
+    background-color: transparent;
+  }
 
-    nav ul {
-      padding-top: 0;
-    }
+  nav ul {
+    padding-top: 0;
+  }
 }
